--- a/dashboard.html
+++ b/dashboard.html
@@ -543,6 +543,17 @@
     </div>
   </div>
   
+  <!-- Feedback Button -->
+  <button id="feedback-btn" style="position:fixed;bottom:2rem;right:2rem;z-index:9999;background:#f72585;color:#fff;border:none;border-radius:50%;width:56px;height:56px;font-size:2rem;box-shadow:0 4px 12px rgba(0,0,0,0.15);">
+    <i class="bi bi-chat-dots"></i>
+  </button>
+  <!-- Feedback Modal (hidden by default) -->
+  <div id="feedback-modal" style="display:none;position:fixed;bottom:80px;right:2rem;z-index:10000;background:#fff;padding:2rem;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.15);">
+    <h5>We value your feedback!</h5>
+    <textarea id="feedback-text" class="form-control mb-2" rows="3" placeholder="Your feedback..."></textarea>
+    <button id="submit-feedback" class="btn btn-primary w-100">Send</button>
+  </div>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script type="module">
@@ -1049,6 +1060,22 @@
         setTimeout(() => { this.textContent = 'Copy Code'; }, 2000);
       });
     });
+  </script>
+  
+  <script>
+    document.getElementById('feedback-btn').onclick = function() {
+      document.getElementById('feedback-modal').style.display = 'block';
+    };
+    document.getElementById('submit-feedback').onclick = function() {
+      fetch('https://yourdomain.com/api/feedback', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ text: document.getElementById('feedback-text').value })
+      }).then(() => {
+        document.getElementById('feedback-modal').style.display = 'none';
+        alert('Thank you for your feedback!');
+      });
+    };
   </script>
 </body>
 </html> 
