--- a/dashboard.html
+++ b/dashboard.html
@@ -557,7 +557,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script type="module">
-    import HeatmapViewer from './heatmapViewer.js';
+import HeatmapViewer from '../heatmapViewer.js';
     
     document.addEventListener('DOMContentLoaded', function() {
       // Toggle sidebar
