--- a/dashboard.html
+++ b/dashboard.html
@@ -1027,8 +1027,7 @@
         fetch('/api/websites', {
           method: 'POST',
           headers: {
-            'Content-Type': 'application/json',
-            'x-auth-token': localStorage.getItem('authToken')
+            'Content-Type': 'application/json'
           },
           body: JSON.stringify({ url })
         })
